--- a/style.css
+++ b/style.css
@@ -729,27 +729,9 @@ span {
 }
 
 /* Animation  */
-.slideup {
-  animation: Slideup 1s ease;
-}
 
-@keyframes Slideup {
-  0% {
-    opacity: 0;
-    transform: translateY(250px);
-  }
 
-  50% {
-    transform: translateY(-25px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
-
-@keyframes navSlide {
+/* @keyframes navSlide {
   0% {
     opacity: 0;
     transform: translateY(30px) scale(0);
@@ -765,20 +747,18 @@ span {
   }
 }
 .slide-in-blurred-bottom {
-	animation: slide-in-blurred-bottom 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+	animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
 }
 
 @keyframes slide-in-blurred-bottom {
   0% {
     transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
     transform-origin: 50% 100%;
-    /* filter: blur(40px); */
     opacity: 0;
   }
   100% {
     transform: translateY(0) scaleY(1) scaleX(1);
     transform-origin: 50% 50%;
-    /* filter: blur(0); */
     opacity: 1;
   }
 }
@@ -799,30 +779,30 @@ span {
   }
 }
 .slide-in-elliptic-top-fwd {
-	animation: slide-in-elliptic-top-fwd 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	animation: slide-in-elliptic-top-fwd 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   animation-delay: 0.3s;
 }
  @keyframes slide-in-elliptic-top-fwd {
   0% {
-    transform: translateY(-60px) rotateX(-30deg) scale(0);
-    transform-origin: 50% 100%;
     opacity: 0;
+    transform: translateY(-30px) rotateX(-30deg) scale(0);
+    transform-origin: 50% 100%;
   }
   100% {
-    transform: translateY(0) rotateX(0) scale(1);
-    transform-origin: 50% 1400px;
     opacity: 1;
+    transform: translateY(0) rotateX(0) scale(1);
+    transform-origin: 50% 140px;
   }
 }
 
 .tracking-in-expand-fwd-top {
-	animation: tracking-in-expand-fwd-top 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	animation: tracking-in-expand-fwd-top 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
   animation-delay: 0.3s;
 }
  @keyframes tracking-in-expand-fwd-top {
   0% {
-    letter-spacing: -0.5em;
-    transform: translateZ(-700px) translateY(-500px);
+    letter-spacing: 1em;
+    transform: translateZ(40px) translateY(-30px);
     opacity: 0;
   }
   40% {
@@ -833,8 +813,62 @@ span {
     opacity: 1;
   }
 }
+.slide-in-blurred-bottom {
+	animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+  animation-delay: 0.3s;
+  will-change: transform;
+}
+@keyframes slide-in-blurred-bottom {
+  0% {
+    transform: translateY(100px) scaleY(2) scaleX(0.2);
+    transform-origin: 50% 100%;
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) scaleY(1) scaleX(1);
+    transform-origin: 50% 50%;
+    opacity: 1;
+  }
+}
+.fade-in {
+	animation: fade-in-bck 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation-delay: 0.3s;
+}
+@keyframes fade-in-bck {
+  0% {
+    transform: translateZ(40px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+.fade {
+  animation: fade 1s ease both;
+  animation: 0.25s;
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.overflow-animate {
+  animation:  overflow 4s;
+}
+@keyframes overflow {
+  0% {
+    overflow: hidden;
+  }
+  100% {
+    overflow: visible;
+  }
+} */
 
-
+@keyframes navSlide {0% {opacity: 0;transform: translateY(30px) scale(0);}50% {transform: translateY(-5px);}100% {opacity: 1;transform: translateY(0px) scale(1);}}.slide-in-blurred-bottom {animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;}@keyframes slide-in-blurred-bottom {0% {transform: translateY(1000px) scaleY(2.5) scaleX(0.2);transform-origin: 50% 100%;opacity: 0;}100% {transform: translateY(0) scaleY(1) scaleX(1);transform-origin: 50% 50%;opacity: 1;}}.tracking-in-expand {animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;animation-delay: 0.5s;}@keyframes tracking-in-expand {0% {letter-spacing: -0.5em;opacity: 0;}40% {opacity: 0.6;}100% {opacity: 1;}}.slide-in-elliptic-top-fwd {animation: slide-in-elliptic-top-fwd 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;animation-delay: 0.3s;}@keyframes slide-in-elliptic-top-fwd {0% {opacity: 0;transform: translateY(-30px) rotateX(-30deg) scale(0);transform-origin: 50% 100%;}100% {opacity: 1;transform: translateY(0) rotateX(0) scale(1);transform-origin: 50% 140px;}}.tracking-in-expand-fwd-top {animation: tracking-in-expand-fwd-top 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;animation-delay: 0.3s;}@keyframes tracking-in-expand-fwd-top {0% {letter-spacing: 1em;transform: translateZ(40px) translateY(-30px);opacity: 0;}40% {opacity: 0.6;}100% {transform: translateZ(0) translateY(0);opacity: 1;}}.slide-in-blurred-bottom {animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;animation-delay: 0.3s;will-change: transform;}@keyframes slide-in-blurred-bottom {0% {transform: translateY(100px) scaleY(2) scaleX(0.2);transform-origin: 50% 100%;opacity: 0;}100% {transform: translateY(0) scaleY(1) scaleX(1);transform-origin: 50% 50%;opacity: 1;}}.fade-in {animation: fade-in-bck 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;animation-delay: 0.3s;}@keyframes fade-in-bck {0% {transform: translateZ(40px);opacity: 0;}100% {transform: translateZ(0);opacity: 1;}}.fade {animation: fade 1s ease both;animation: 0.25s;}@keyframes fade {0% {opacity: 0;}100% {opacity: 1;}}.overflow-animate {animation: overflow 4s;}@keyframes overflow {0% {overflow: hidden;}100% {overflow: visible;}}
 /* Scrolbar Styling  */
 ::-webkit-scrollbar {
   width: 12px;
