--- a/style.css
+++ b/style.css
@@ -746,22 +746,7 @@ span {
     transform: translateY(0px) scale(1);
   }
 }
-.slide-in-blurred-bottom {
-	animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
-}
 
-@keyframes slide-in-blurred-bottom {
-  0% {
-    transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
-    transform-origin: 50% 100%;
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0) scaleY(1) scaleX(1);
-    transform-origin: 50% 50%;
-    opacity: 1;
-  }
-}
 .tracking-in-expand {
 	animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
   animation-delay: 0.5s;
@@ -813,10 +798,9 @@ span {
     opacity: 1;
   }
 }
-.slide-in-blurred-bottom {
+.slide-in-bottom {
 	animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
   animation-delay: 0.3s;
-  will-change: transform;
 }
 @keyframes slide-in-blurred-bottom {
   0% {
@@ -868,7 +852,7 @@ span {
   }
 } */
 
-@keyframes navSlide {0% {opacity: 0;transform: translateY(30px) scale(0);}50% {transform: translateY(-5px);}100% {opacity: 1;transform: translateY(0px) scale(1);}}.slide-in-blurred-bottom {animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;}@keyframes slide-in-blurred-bottom {0% {transform: translateY(1000px) scaleY(2.5) scaleX(0.2);transform-origin: 50% 100%;opacity: 0;}100% {transform: translateY(0) scaleY(1) scaleX(1);transform-origin: 50% 50%;opacity: 1;}}.tracking-in-expand {animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;animation-delay: 0.5s;}@keyframes tracking-in-expand {0% {letter-spacing: -0.5em;opacity: 0;}40% {opacity: 0.6;}100% {opacity: 1;}}.slide-in-elliptic-top-fwd {animation: slide-in-elliptic-top-fwd 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;animation-delay: 0.3s;}@keyframes slide-in-elliptic-top-fwd {0% {opacity: 0;transform: translateY(-30px) rotateX(-30deg) scale(0);transform-origin: 50% 100%;}100% {opacity: 1;transform: translateY(0) rotateX(0) scale(1);transform-origin: 50% 140px;}}.tracking-in-expand-fwd-top {animation: tracking-in-expand-fwd-top 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;animation-delay: 0.3s;}@keyframes tracking-in-expand-fwd-top {0% {letter-spacing: 1em;transform: translateZ(40px) translateY(-30px);opacity: 0;}40% {opacity: 0.6;}100% {transform: translateZ(0) translateY(0);opacity: 1;}}.slide-in-blurred-bottom {animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;animation-delay: 0.3s;will-change: transform;}@keyframes slide-in-blurred-bottom {0% {transform: translateY(100px) scaleY(2) scaleX(0.2);transform-origin: 50% 100%;opacity: 0;}100% {transform: translateY(0) scaleY(1) scaleX(1);transform-origin: 50% 50%;opacity: 1;}}.fade-in {animation: fade-in-bck 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;animation-delay: 0.3s;}@keyframes fade-in-bck {0% {transform: translateZ(40px);opacity: 0;}100% {transform: translateZ(0);opacity: 1;}}.fade {animation: fade 1s ease both;animation: 0.25s;}@keyframes fade {0% {opacity: 0;}100% {opacity: 1;}}.overflow-animate {animation: overflow 4s;}@keyframes overflow {0% {overflow: hidden;}100% {overflow: visible;}}
+@keyframes navSlide {0% {opacity: 0;transform: translateY(30px) scale(0);}50% {transform: translateY(-5px);}100% {opacity: 1;transform: translateY(0px) scale(1);}}.tracking-in-expand {animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;animation-delay: 0.5s;}@keyframes tracking-in-expand {0% {letter-spacing: -0.5em;opacity: 0;}40% {opacity: 0.6;}100% {opacity: 1;}}.slide-in-elliptic-top-fwd {animation: slide-in-elliptic-top-fwd 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;animation-delay: 0.3s;}@keyframes slide-in-elliptic-top-fwd {0% {opacity: 0;transform: translateY(-30px) rotateX(-30deg) scale(0);transform-origin: 50% 100%;}100% {opacity: 1;transform: translateY(0) rotateX(0) scale(1);transform-origin: 50% 140px;}}.tracking-in-expand-fwd-top {animation: tracking-in-expand-fwd-top 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;animation-delay: 0.3s;}@keyframes tracking-in-expand-fwd-top {0% {letter-spacing: 1em;transform: translateZ(40px) translateY(-30px);opacity: 0;}40% {opacity: 0.6;}100% {transform: translateZ(0) translateY(0);opacity: 1;}}.slide-in-bottom {animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;animation-delay: 0.3s;}@keyframes slide-in-blurred-bottom {0% {transform: translateY(100px) scaleY(2) scaleX(0.2);transform-origin: 50% 100%;opacity: 0;}100% {transform: translateY(0) scaleY(1) scaleX(1);transform-origin: 50% 50%;opacity: 1;}}.fade-in {animation: fade-in-bck 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;animation-delay: 0.3s;}@keyframes fade-in-bck {0% {transform: translateZ(40px);opacity: 0;}100% {transform: translateZ(0);opacity: 1;}}.fade {animation: fade 1s ease both;animation: 0.25s;}@keyframes fade {0% {opacity: 0;}100% {opacity: 1;}}.overflow-animate {animation: overflow 4s;}@keyframes overflow {0% {overflow: hidden;}100% {overflow: visible;}}
 /* Scrolbar Styling  */
 ::-webkit-scrollbar {
   width: 12px;
