--- a/style.css
+++ b/style.css
@@ -696,6 +696,7 @@ span {
   main {
     padding-block-start: 0.5rem;
   }
+
   .display-wrapper {
     margin-block: 0.5rem 1rem;
     padding: 0.8rem 0.8rem 0.8rem 1.3rem;
@@ -731,7 +732,7 @@ span {
 /* Animation  */
 
 
-/* @keyframes navSlide {
+@keyframes navSlide {
   0% {
     opacity: 0;
     transform: translateY(30px) scale(0);
@@ -748,31 +749,37 @@ span {
 }
 
 .tracking-in-expand {
-	animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
   animation-delay: 0.5s;
 }
+
 @keyframes tracking-in-expand {
   0% {
     letter-spacing: -0.5em;
     opacity: 0;
   }
+
   40% {
     opacity: 0.6;
   }
+
   100% {
     opacity: 1;
   }
 }
+
 .slide-in-elliptic-top-fwd {
-	animation: slide-in-elliptic-top-fwd 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-in-elliptic-top-fwd 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   animation-delay: 0.3s;
 }
- @keyframes slide-in-elliptic-top-fwd {
+
+@keyframes slide-in-elliptic-top-fwd {
   0% {
     opacity: 0;
     transform: translateY(-30px) rotateX(-30deg) scale(0);
     transform-origin: 50% 100%;
   }
+
   100% {
     opacity: 1;
     transform: translateY(0) rotateX(0) scale(1);
@@ -781,90 +788,106 @@ span {
 }
 
 .tracking-in-expand-fwd-top {
-	animation: tracking-in-expand-fwd-top 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  animation: tracking-in-expand-fwd-top 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
   animation-delay: 0.3s;
 }
- @keyframes tracking-in-expand-fwd-top {
+
+@keyframes tracking-in-expand-fwd-top {
   0% {
     letter-spacing: 1em;
     transform: translateZ(40px) translateY(-30px);
     opacity: 0;
   }
+
   40% {
     opacity: 0.6;
   }
+
   100% {
     transform: translateZ(0) translateY(0);
     opacity: 1;
   }
 }
+
 .slide-in-bottom {
-	animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
-  animation-delay: 0.3s;
+  animation: slide-in-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
 }
-@keyframes slide-in-blurred-bottom {
+
+@keyframes slide-in-bottom {
   0% {
     transform: translateY(100px) scaleY(2) scaleX(0.2);
-    transform-origin: 50% 100%;
+    /* transform-origin: 50% 100%; */
     opacity: 0;
   }
+
   100% {
     transform: translateY(0) scaleY(1) scaleX(1);
-    transform-origin: 50% 50%;
+    /* transform-origin: 50% 50%; */
     opacity: 1;
   }
 }
+
 .fade-in {
-	animation: fade-in-bck 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation: fade-in-bck 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   animation-delay: 0.3s;
 }
+
 @keyframes fade-in-bck {
   0% {
     transform: translateZ(40px);
     opacity: 0;
   }
+
   100% {
     transform: translateZ(0);
     opacity: 1;
   }
 }
+
 .fade {
   animation: fade 1s ease both;
   animation: 0.25s;
 }
+
 @keyframes fade {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
 }
+
 .overflow-animate {
-  animation:  overflow 4s;
+  animation: overflow 4s;
 }
+
 @keyframes overflow {
   0% {
     overflow: hidden;
   }
+
   100% {
     overflow: visible;
   }
-} */
+}
 
-@keyframes navSlide {0% {opacity: 0;transform: translateY(30px) scale(0);}50% {transform: translateY(-5px);}100% {opacity: 1;transform: translateY(0px) scale(1);}}.tracking-in-expand {animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;animation-delay: 0.5s;}@keyframes tracking-in-expand {0% {letter-spacing: -0.5em;opacity: 0;}40% {opacity: 0.6;}100% {opacity: 1;}}.slide-in-elliptic-top-fwd {animation: slide-in-elliptic-top-fwd 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;animation-delay: 0.3s;}@keyframes slide-in-elliptic-top-fwd {0% {opacity: 0;transform: translateY(-30px) rotateX(-30deg) scale(0);transform-origin: 50% 100%;}100% {opacity: 1;transform: translateY(0) rotateX(0) scale(1);transform-origin: 50% 140px;}}.tracking-in-expand-fwd-top {animation: tracking-in-expand-fwd-top 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;animation-delay: 0.3s;}@keyframes tracking-in-expand-fwd-top {0% {letter-spacing: 1em;transform: translateZ(40px) translateY(-30px);opacity: 0;}40% {opacity: 0.6;}100% {transform: translateZ(0) translateY(0);opacity: 1;}}.slide-in-bottom {animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;animation-delay: 0.3s;}@keyframes slide-in-blurred-bottom {0% {transform: translateY(100px) scaleY(2) scaleX(0.2);transform-origin: 50% 100%;opacity: 0;}100% {transform: translateY(0) scaleY(1) scaleX(1);transform-origin: 50% 50%;opacity: 1;}}.fade-in {animation: fade-in-bck 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;animation-delay: 0.3s;}@keyframes fade-in-bck {0% {transform: translateZ(40px);opacity: 0;}100% {transform: translateZ(0);opacity: 1;}}.fade {animation: fade 1s ease both;animation: 0.25s;}@keyframes fade {0% {opacity: 0;}100% {opacity: 1;}}.overflow-animate {animation: overflow 4s;}@keyframes overflow {0% {overflow: hidden;}100% {overflow: visible;}}
 /* Scrolbar Styling  */
 ::-webkit-scrollbar {
   width: 12px;
 }
+
 ::-webkit-scrollbar-track {
   background: linear-gradient(180deg, var(--almost-black) 0%, var(--almost-black) 100%);
 }
+
 ::-webkit-scrollbar-thumb {
   cursor: pointer;
   background: var(--green);
   border-radius: 100vmax;
 }
+
 ::-webkit-scrollbar-thumb:hover {
   cursor: pointer;
   background: var(--checkbox-green);
