--- a/style.css
+++ b/style.css
@@ -465,50 +465,7 @@ main {
   fill: var(--almost-white);
 }
 
-/* Hover States  */
-@media (hover:hover) {
-  .copy-btn:hover+.onmouse-message {
-    opacity: 1;
-    transform: translateY(0);
-  }
 
-  .copy-btn:hover {
-    transform: scale(1.09) translateY(-2px);
-  }
-
-  .input-sub-wrapper:hover {
-    transform: translateY(-2px);
-  }
-
-  .btn:hover {
-    transform: scale(1.03);
-    background-color: hsl(127, 100%, 72%)
-  }
-
-  .btn:hover .btn-svg {
-    transform: scale(1.05) translateX(3px);
-  }
-
-  .btn-reset:hover {
-    border-color: var(--green);
-    color: hsl(127, 100%, 72%);
-  }
-
-  .btn-reset:hover .btn-reset-svg {
-    fill: hsl(127, 100%, 72%);
-    transform: scale(1.03) rotate(360deg);
-  }
-
-  input[type=range]::-webkit-slider-thumb:hover,
-  input[type=range]::-webkit-slider-thumb:active {
-    transform: scale(1.05) translateY(-1px);
-  }
-
-  input[type='range']::-moz-range-thumb:hover,
-  input[type=range]::-moz-range-thumb:active {
-    transform: scale(1.05) translateY(-1px);
-  }
-}
 
 /* Utility Classes  */
 .bg-red {
@@ -729,8 +686,74 @@ span {
   }
 }
 
-/* Animation  */
 
+
+/* Scrolbar Styling  */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: linear-gradient(180deg, var(--almost-black) 0%, var(--almost-black) 100%);
+}
+
+::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  background: var(--green);
+  border-radius: 100vmax;
+}
+
+/* Hover States  */
+@media (hover:hover) {
+  .copy-btn:hover+.onmouse-message {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  .copy-btn:hover {
+    transform: scale(1.09) translateY(-2px);
+  }
+
+  .input-sub-wrapper:hover {
+    transform: translateY(-2px);
+  }
+
+  .btn:hover {
+    transform: scale(1.03);
+    background-color: hsl(127, 100%, 72%)
+  }
+
+  .btn:hover .btn-svg {
+    transform: scale(1.05) translateX(3px);
+  }
+
+  .btn-reset:hover {
+    border-color: var(--green);
+    color: hsl(127, 100%, 72%);
+  }
+
+  .btn-reset:hover .btn-reset-svg {
+    fill: hsl(127, 100%, 72%);
+    transform: scale(1.03) rotate(360deg);
+  }
+
+  input[type=range]::-webkit-slider-thumb:hover,
+  input[type=range]::-webkit-slider-thumb:active {
+    transform: scale(1.05) translateY(-1px);
+  }
+
+  input[type='range']::-moz-range-thumb:hover,
+  input[type=range]::-moz-range-thumb:active {
+    transform: scale(1.05) translateY(-1px);
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    cursor: pointer;
+    background: var(--checkbox-green);
+  }
+}
+
+/* Animation  */
 
 @keyframes navSlide {
   0% {
@@ -750,7 +773,6 @@ span {
 
 .tracking-in-expand {
   animation: tracking-in-expand 1.3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-  /* animation-delay: 0.5s; */
 }
 
 @keyframes tracking-in-expand {
@@ -770,7 +792,6 @@ span {
 
 .slide-in-elliptic-top-fwd {
   animation: slide-in-elliptic-top-fwd 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-  /* animation-delay: 0.3s; */
 }
 
 @keyframes slide-in-elliptic-top-fwd {
@@ -789,7 +810,6 @@ span {
 
 .tracking-in-expand-fwd-top {
   animation: tracking-in-expand-fwd-top 1.3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-  /* animation-delay: 0.3s; */
 }
 
 @keyframes tracking-in-expand-fwd-top {
@@ -816,20 +836,17 @@ span {
 @keyframes slide-in-bottom {
   0% {
     transform: translateY(100px) scaleY(2) scaleX(0.2);
-    /* transform-origin: 50% 100%; */
     opacity: 0;
   }
 
   100% {
     transform: translateY(0) scaleY(1) scaleX(1);
-    /* transform-origin: 50% 50%; */
     opacity: 1;
   }
 }
 
 .fade-in {
   animation: fade-in-bck 1.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-  /* animation-delay: 0.3s; */
 }
 
 @keyframes fade-in-bck {
@@ -839,12 +856,25 @@ span {
   }
 
   100% {
-    transform: translateZ(0);
+    transform: translateZ(0px);
     opacity: 1;
   }
 }
 
+.btn,
+.btn-reset {
+  animation: fade-in-btn 1.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
 
+@keyframes fade-in-btn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
 
 .overflow-animate {
   animation: overflow 4s;
@@ -858,24 +888,4 @@ span {
   100% {
     overflow: visible;
   }
-}
-
-/* Scrolbar Styling  */
-::-webkit-scrollbar {
-  width: 12px;
-}
-
-::-webkit-scrollbar-track {
-  background: linear-gradient(180deg, var(--almost-black) 0%, var(--almost-black) 100%);
-}
-
-::-webkit-scrollbar-thumb {
-  cursor: pointer;
-  background: var(--green);
-  border-radius: 100vmax;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  cursor: pointer;
-  background: var(--checkbox-green);
 }
